Limits dropdown option width so that it no longer overflows horizontally

--- a/src/app/content/homepage/products/products.component.css
+++ b/src/app/content/homepage/products/products.component.css
@@ -38,7 +38,6 @@ img
 
 .thumbnail {
   visibility: hidden;
-  z-index: 1;
 }
 
 .delivery-icon {
